[tool.poetry]
name = "ltu"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = "^3.6"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
ipython = "*"

[tool.poetry.scripts]
ltu-run-server = 'ltu.server:run_server_main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
