[tool.poetry]
name = "ltu"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]
include = [
	{ path = "third-party/silvio-docker-languagetool", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.6"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
ipython = "*"

[tool.poetry.scripts]
ltu-run-server = 'ltu.server:run_container_server'
ltu-build-server = 'ltu.server:build_server_main'
ltu-check-asciidoctor = 'ltu.cli:check_asciidoctor_cli'
ltu-install-server = 'ltu.server:install_server'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
